2009-07-09 dispatcher 0.9.95

* store complete worker result in the database instead just of status
* add mote fine graded control over logging information

2009-07-07 dispatcher 0.9.94

* small changes: config structures are anonymous, extra warnings
* make syslog ids values configurable for dispatcher and worker
* add basic command line processing, make possible to override configuration
file location

2009-07-03 dispatcher 0.9.93

* use standard bool instead of custom typedef
* use new table, add some more output useful for debugging

2009-06-29 dispatcher 0.9.92

* extend children management (kill,timeouts)
* implement config file handling
* use DESTDIR in Makefile.in

2009-06-16 dispatcher 0.9.91

* increase query limit size (maybe heap based limit would be better in future)
* refine gearman reply processing, i.e. mysql escaping, limit string replies
size
* move status init from signal init into its own method

2009-06-12 dispatcher 0.9.3

* add pause sense information, implement graceful termination
* add __attribute__ macros to improve warning capabilities
* refine configure headers checks

2009-06-11 dispatcher 0.9.2

* fix invalid memory access if gearman reply processing
* fix CFLAGS processing, fix configure.ac string tests

2009-06-10 dispatcher 0.9.1

* add tests for gearman and remove pkg-config
* modify tests for mysql and RPATH
* modify tests for RPATH

2009-06-03 dispatcher 0.9.0

* initial autotools support
* first official release