@@ -1,3 +1,7 @@
+2009-07-?? dispatcher ??????
+
+* reopen logs on reload, this prevents using freed identifier by syslog
+
 2009-07-09 dispatcher 0.9.95
 
 * store complete worker result in the database instead just of status
